kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-pulse
  labels:
    app.kubernetes.io/part-of: api-pulse
